<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailKandidatActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/biru"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Theme.PTBkel1.PopupOverlay"
        app:title="@string/e_voting1">
    </androidx.appcompat.widget.Toolbar>

<!--    <TextView-->
<!--        android:id="@+id/textView5"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="35dp"-->
<!--        android:layout_marginTop="25dp"-->
<!--        android:text="@string/informasi_kandidat"-->
<!--        android:textAlignment="center"-->
<!--        android:textColor="#000000"-->
<!--        android:textSize="24sp"-->
<!--        android:textStyle="bold"-->
<!--        android:typeface="normal"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/toolbar" />-->

    <ImageView
        android:id="@+id/fotoKandidat2"
        android:layout_width="79dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="false"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:srcCompat="@drawable/avatar" />

    <TextView
        android:id="@+id/namaKandidat2"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/fotoKandidat2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:text="@string/kandidat_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotoKandidat2" />

    <TextView
        android:id="@+id/namaPresma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/namaKandidat2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="45dp"
        android:text="@string/nama_presma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namaKandidat2" />

    <TextView
        android:id="@+id/namaWaPresma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/namaPresma"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:text="@string/nama_wapresma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namaPresma" />

    <TextView
        android:id="@+id/Prodi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/namaWaPresma"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:text="@string/prodi_fakultas"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namaWaPresma" />

    <TextView
        android:id="@+id/visiKandidat2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Prodi"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:text="@string/visi"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Prodi" />

    <TextView
        android:id="@+id/misiKandidat3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/visiKandidat2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:text="@string/misi"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visiKandidat2" />

    <Button
        android:id="@+id/button_voting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/biru"
        android:text="@string/voting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/misiKandidat3" />

</androidx.constraintlayout.widget.ConstraintLayout>