<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/biru"
        app:popupTheme="@style/Theme.PTBkel1.PopupOverlay">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/e_voting1"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="320dp"
            tools:layout_editor_absoluteY="16dp" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/biru"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:popupTheme="@style/Theme.PTBkel1.PopupOverlay">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/gunakan_hak_suaramu_dengan_bijak"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="320dp"
            tools:layout_editor_absoluteY="16dp" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="417dp"
        android:layout_height="245dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/group3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="92dp"
        android:layout_height="109dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.235"
        app:srcCompat="@drawable/group2" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="54dp"
        android:layout_height="47dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:srcCompat="@drawable/user" />

    <EditText
        android:id="@+id/TextEmailRegister"
        android:layout_width="270dp"
        android:layout_height="47dp"
        android:layout_margin="35dp"
        android:layout_marginStart="-20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:background="@color/white"
        android:ellipsize="none"
        android:inputType="textEmailAddress"
        android:hint="Email"
        android:padding="15dp"
        android:textAlignment="textStart"
        android:textColor="@color/abu_abu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="54dp"
        android:layout_height="47dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="35dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/vector" />

    <EditText
        android:id="@+id/TextPasswordRegister"
        android:layout_width="270dp"
        android:layout_height="47dp"
        android:layout_margin="35dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="60dp"
        android:background="@color/white"
        android:ellipsize="none"
        android:inputType="textPassword"
        android:padding="15dp"
        android:hint="@string/password"
        android:textColor="@color/abu_abu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/TextEmailRegister" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="188dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/biru"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPasswordRegister" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.166" />

    <TextView
        android:id="@+id/tv_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/biru_muda"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/toolbar3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_register" />

</androidx.constraintlayout.widget.ConstraintLayout>